# cpp-dojo

./: CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml
src/: CMakeLists.txt  hello.cpp  joinStrings.cpp  joinStrings.h  main.cpp  splitString.cpp  splitString.h
test/: CMakeLists.txt  hello_test.cpp  joinStrings_test.cpp  splitString_test.cpp  test_main.cpp
